--- a/socrates-admin/Pages/Login.razor
+++ b/socrates-admin/Pages/Login.razor
@@ -1,17 +1,38 @@
 ﻿@page "/login"
 @using Models.Request;
+@using Services;
 @layout AuthLayout
 @inject NavigationManager navigationManager
 
 <PageTitle>登录</PageTitle>
 
-<div >
-    <div style="padding:30px;" >
+<Modal Title="@("注册")"
+       Visible="@_visible"
+       OnOk="@HandleOk">
+    <Form Model="@_registerDto"
+          LabelColSpan="8"
+          WrapperColSpan="16">
+        <FormItem Label="名称">
+            <Input @bind-Value="@context.name" />
+        </FormItem>
+        <FormItem Label="编号">
+            <Input @bind-Value="@context.mobile" />
+        </FormItem>
+
+        <FormItem Label="密码">
+            <InputPassword @bind-Value="@context.password" />
+        </FormItem>
+
+    </Form>
+</Modal>
+
+<div>
+    <div style="padding:30px;">
         <Card Bordered="true" Title=@("用户登录") Style="width:400px" Hoverable="true">
             <Body>
-                <Form Model="@_loginDto">
+                <Form Model="@_loginDto" OnFinish="LoginAsync">
                     <FormItem>
-                        <AntDesign.Input Placeholder="请输入用户名" Size="large" @bind-Value="@context.account">
+                        <AntDesign.Input Placeholder="请输入手机号" Size="large" @bind-Value="@context.mobile">
                             <Prefix><Icon Type="user" /></Prefix>
                         </AntDesign.Input>
                     </FormItem>
@@ -26,7 +47,7 @@
                         </SpaceItem>
                         <SpaceItem>
                             <div class="other">
-                                <a class="register" href="#">注册账户</a>
+                                <a class="register" @onclick="Reigster">注册账户</a>
                                 <a style="float: right;">
                                     忘记密码
                                 </a>
@@ -40,5 +61,32 @@
 </div>
 
 @code {
-    private LoginDto _loginDto=new();
+    @inject IAuthService _authService
+
+    private LoginDto _loginDto = new();
+    private RegisterDto _registerDto = new();
+
+    protected bool _visible = false;
+
+
+    protected async Task LoginAsync(EditContext context)
+    {
+        await _authService.Login(_loginDto);
+    }
+
+    protected void Reigster(MouseEventArgs args)
+    {
+
+        _visible = true;
+    }
+
+    protected async Task HandleOk(MouseEventArgs args)
+    {
+
+        await _authService.Register(_registerDto);
+
+        _visible = false;
+
+
+    }
 }
