feature: 增加应用、职位管理接口

--- a/socrates-admin/Pages/Role.razor
+++ b/socrates-admin/Pages/Role.razor
@@ -119,7 +119,7 @@ else
 
         if (_title == "新增")
         {
-            await _roleService.Create(new Models.Request.CraeteRoleDto()
+            await _roleService.Create(new Models.Request.CreateRoleDto()
                 {
                     code = _role.code,
                     name = _role.name,
