--- a/socrates-admin/Pages/Login.razor
+++ b/socrates-admin/Pages/Login.razor
@@ -7,7 +7,7 @@
 <PageTitle>登录</PageTitle>
 
 <div class="back">
-    <div style="position: fixed; left: 10%; top: 50%; transform: translateY(-50%); padding:30px;">
+    <div style="position: fixed; right: 10%; top: 50%; transform: translateY(-50%); padding:30px;">
         <Card Bordered="true" Title=@("登录中心") Style="width:400px" Hoverable="true">
             <Body>
                 <Form Model="@_loginDto" OnFinish="LoginAsync">
@@ -42,7 +42,7 @@
 
 <style>
     .back {
-        background-image: url(Login.png);
+        background-image: url(back.jpg);
         background-size: cover; /* 背景图片会根据页面大小自动调整 */
         background-position: center; /* 背景图片居中显示 */
         background-repeat: no-repeat; /* 防止图片重复 */
