fix:修改登录页面

--- a/socrates-admin/Pages/Login.razor
+++ b/socrates-admin/Pages/Login.razor
@@ -34,6 +34,15 @@
                             </div>
                         </SpaceItem>
                     </Space>
+                    <Divider>其它登录方式</Divider>
+                    <Space Style="display:flex;justify-content:center;">
+                        <SpaceItem>
+                            <Icon Type="wechat" Theme="outline"   Height="2em" Width="2em" />
+                        </SpaceItem>
+                        <SpaceItem>
+                            <Icon Type="github" Theme="outline"  Height="2em" Width="2em" />
+                        </SpaceItem>
+                    </Space>
                 </Form>
             </Body>
         </Card>
