--- a/socrates-admin/Pages/Post.razor
+++ b/socrates-admin/Pages/Post.razor
@@ -41,10 +41,10 @@ else
                         Multiple
                         TreeDefaultExpandAll
                         EnableSearch
-                             MatchedStyle="font-weight: bold" />
-             </FormItem>
-         </Form>
-     </Modal>
+                            MatchedStyle="font-weight: bold" />
+            </FormItem>
+        </Form>
+    </Modal>
 
 
 
@@ -109,20 +109,17 @@ else
 
     protected async Task GetOrganizations()
     {
-        var result = await _organizationService.All();
-        _organizations = result?.data ?? new List<OrganizationNodeDto>();
+        _organizations = await _organizationService.All() ?? new List<OrganizationNodeDto>();
     }
 
     protected async Task GetOrganizationList()
     {
-        var result = await _organizationService.List();
-        _organizationList = result?.data ?? new List<OrganizationDto>();
+        _organizationList = await _organizationService.List() ?? new List<OrganizationDto>();
     }
 
     protected async Task GetPageList()
     {
-        var result = await _postService.PageList(_pageIndex, _pageSize);
-        _pageList = result!.data;
+        _pageList = await _postService.PageList(_pageIndex, _pageSize) ?? new PageList<PostDto>();
     }
 
     private void HandleCreate(MouseEventArgs e)
